# Cherry

./: .clang-format  .gitignore  .gitignore.orig  .gitmodules  CMakeLists.txt  Engine.sln  README.md  TODO.txt  genProject.bat  premake5.lua
Blossom/: imgui.ini  premake5.lua
Blossom/assets/: BatchShader.glsl  Scene.chs  example.chs  instrumentation_Runtime.json  instrumentation_Startup.json
Blossom/assets/Project/: assetmap.yaml  example.chs  premake5.lua  script.cs
Blossom/src/: Assetmap.h  BlossomEditor.cpp  EditorAction.h  EditorLayer.cpp  EditorLayer.h
Blossom/src/Panels/: ContentBrowserPanel.cpp  ContentBrowserPanel.h  PropertiesPanel.cpp  PropertiesPanel.h  SceneHierarchyPanel.cpp  SceneHierarchyPanel.h
Cherry/: Cherry.vcxproj  Cherry.vcxproj.filters  Engine.vcxproj  premake5.lua
Cherry/src/: Cherry.h  epch.h
Cherry/src/Debug/: Profiler.cpp  Profiler.h
Cherry/src/Events/: Event.cpp  Event.h  EventListener.h  EventType.h  Input.cpp  Input.h
Cherry/src/Graphics/: Camera.cpp  Camera.h  CameraController.cpp  Material.cpp  Material.h  Mesh.cpp  Mesh.h  Vertex.h
Cherry/src/ImGui/: ImGuiBuild.cpp  ImGuiRenderer.cpp  ImGuiRenderer.h
Cherry/src/Math/: Algorithm.h  Matrix.h  Projection.cpp  Projection.h  Transform.cpp  Transform.h  Vector.h
Cherry/src/Renderer/: Buffers.cpp  Buffers.h  Framebuffer.cpp  Framebuffer.h  RenderAPI.cpp  RenderAPI.h  RenderCommand.cpp  RenderCommand.h  Renderer.cpp  Renderer.h  Renderer2D.cpp  Renderer2D.h  Renderer3D.cpp  Renderer3D.h  RenderingContext.cpp  RenderingContext.h  Shader.cpp  Shader.h  ShaderLibrary.cpp  ShaderLibrary.h  Texture.cpp  Texture.h  VertexArray.cpp  VertexArray.h
Cherry/src/Scene/: AssetManager.cpp  AssetManager.h  Component.h  Entity.h  NativeScript.h  Scene.cpp  Scene.h  SceneSerializer.cpp  SceneSerializer.h  Script.h
Cherry/src/Scripting/: Class.cpp  Class.h  Script.cpp  Script.h  ScriptAPI.h  ScriptEngine.cpp  ScriptEngine.h
Cherry/src/System/: FileDialogs.h  System.cpp  SystemInfo.cpp  SystemInfo.h
Cherry/src/Utils/: ColorUtils.h
Cherry/src/core/: Application.cpp  Application.h  Core.h  EntryPoint.h  KeyCodes.h  Layer.h  LayerStack.cpp  LayerStack.h  Log.cpp  Log.h  MouseButtonCodes.h  Pointer.h  Timestep.h  Window.h
ScriptLib/: premake5.lua
ScriptLib/src/: Core.cs  Input.cs  Internal.cs  Keycode.cs  Mousecode.cs  Vector.cs
ScriptLib/src/Game/: Movement.cs
ScriptLib/src/ecs/: Components.cs  Entity.cs
blossom/: imgui.ini
blossom/assets/: BatchShader.glsl  instrumentation_Runtime.json  instrumentation_Startup.json
blossom/assets/Project/: Test.chs  assetmap.yaml  example.chs  level1.chs
blossom/src/: assetmap.cpp  assetmap.h  blossomEditor.cpp  editorAction.h  editorLayer.cpp  editorLayer.h
blossom/src/panels/: contentBrowserPanel.cpp  contentBrowserPanel.h  propertiesPanel.cpp  propertiesPanel.h  sceneHierarchyPanel.cpp  sceneHierarchyPanel.h
cherry/src/: cherry.h  epch.h
cherry/src/core/: application.cpp  application.h  core.h  entryPoint.h  keyCodes.h  layer.h  layerStack.cpp  layerStack.h  log.cpp  log.h  mouseButtonCodes.h  pointer.h  timestep.h  window.h
cherry/src/debug/: profiler.cpp  profiler.h
cherry/src/events/: event.cpp  event.h  eventListener.h  eventType.h  input.cpp  input.h
cherry/src/imgui/: imGuiRenderer.cpp  imGuiRenderer.h
cherry/src/lua/: cherry.lua
cherry/src/math/: algorithm.h  matrix.h  projection.cpp  projection.h  transform.cpp  transform.h  vector.h
cherry/src/renderer/: buffers.cpp  buffers.h  framebuffer.cpp  framebuffer.h  renderAPI.cpp  renderAPI.h  renderCommand.cpp  renderCommand.h  renderer2D.cpp  (+11 more)
scripts/: genProject-windows.bat
tests/: Tests.vcxproj
tests/assets/: BatchShader.glsl  ColorShader.glsl  TextureShader.glsl
tests/src/: Hello.cpp  hello.cpp
(+114 files in other folders)
